# PDF_Accessibility

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOYMENT_TEST_PLAN.md  Dockerfile  LICENSE  QUICK_START.md  README.md  RELEASE_NOTES.md  app.py  audit_report.json  automated-deployment.sh  bedrock-policy.json  buildspec-unified.yml  buildspec.yml  cdk.json  comprehensive-policy.json  deploy-unified-enhanced.sh  deploy-unified.sh  deploy.sh  dockerfile  lambda_function.py  pyproject.toml  remediation_report.html  requirements-dev.txt  requirements.txt
.github/: publish.yml
adobe-autotag-container/: Dockerfile  adobe_autotag_processor.py  requirements.txt
alt-text-generator-container/: Dockerfile  alt_text_generator.js  package.json
cdk/: cdk.json  package-lock.json  package.json
cdk/lib/: pdf2html-stack.js
content_accessibility_utility_on_aws/: __init__.py  cli.py
content_accessibility_utility_on_aws/audit/: auditor.py  base_check.py  standards.py
content_accessibility_utility_on_aws/audit/analyzers/: base_analyzer.py
content_accessibility_utility_on_aws/audit/checks/: color_contrast_checks.py  image_checks.py  link_checks.py
content_accessibility_utility_on_aws/audit/standards/: issue_types.py
content_accessibility_utility_on_aws/batch/: common.py  pdf2html.py  remediate.py
content_accessibility_utility_on_aws/pdf2html/: __init__.py  api.py
content_accessibility_utility_on_aws/pdf2html/services/: bedrock_client.py  page_builder.py
content_accessibility_utility_on_aws/remediate/: api.py  remediation_manager.py  remediation_report_generator.py
content_accessibility_utility_on_aws/utils/: config_defaults.yaml  image_utils.py  path_utils.py
content_accessibility_with_aws/: __init__.py  api.py  cli.py
content_accessibility_with_aws/audit/: __init__.py  api.py  auditor.py  context_collector.py  enhanced_checks.py  report_generator.py
content_accessibility_with_aws/batch/: __init__.py  audit.py  pdf2html.py  remediate.py
content_accessibility_with_aws/pdf2html/: api.py  utils.py
content_accessibility_with_aws/remediate/: __init__.py  api.py  remediation_manager.py  remediation_report_generator.py  remediator.py
content_accessibility_with_aws/utils/: config.py  html_utils.py  image_utils.py  path_fixes.py  path_utils.py  report_generator.py  resources.py  usage_tracker.py
docker_autotag/: Dockerfile  autotag.py  requirements.txt
docs/: CONFIGURING_LIMITS.md  IAM_PERMISSIONS.md  MANUAL_DEPLOYMENT.md  TROUBLESHOOTING_CDK_DEPLOY.md  accessibility_remediation.md  api_integration_guide.md  parameter_reference.md  streamlit_guide.md
html/extracted_html/: page-0.html  page-1.html  page-2.html  page-3.html  page-4.html  page-5.html  result.html  result.json
javascript_docker/: Dockerfile  alt-text.js  package.json
lambda/accessability_checker_after_remidiation/: main.py
lambda/accessibility_checker_after_remediation/: main.py
lambda/accessibility_checker_before_remediation/: main.py
lambda/accessibility_checker_before_remidiation/: Dockerfile  main.py
lambda/add_title/: Dockerfile  myapp.py  requirements.txt  title_generator.py
lambda/error-handler-lambda/: main.py
lambda/pdf-splitter-lambda/: requirements.txt
lambda/post-remediation-accessibility-checker/: Dockerfile
lambda/split_pdf/: main.py
local_batch_processor/: README.md  __init__.py  batch_processor.py  cli.py  enhancement_service.py  ocr_enhancer.py  pdfua_enhancer.py  requirements.txt
pdf2html/: .gitignore  Dockerfile  README.md  THIRD-PARTY-LICENSES  buildspec.yml  deploy.sh  lambda_function.py  pyproject.toml
pdf2html/cdk/: package-lock.json
pdf2html/content_accessibility_utility_on_aws/: __init__.py  api.py  cli.py
remediated_extracted_html.html/: page-0.html  page-1.html  page-2.html  page-3.html  page-4.html  page-5.html  result.html
webapp/: README.md  app.py
webapp/components/: __init__.py  sidebar.py
webapp/config/: __init__.py  app_config_local.py
webapp/processors/: __init__.py  html_processor.py  pdf_processor.py  zip_processor.py
webapp/ui_helpers/: __init__.py  charts.py  download_helpers.py  html_preview.py
webapp/utils/: __init__.py  aws_utils.py  file_utils.py  session_utils.py
webapp/views/: __init__.py  audit_view.py  remediation_view.py  report_view.py  usage_view.py
(+95 files in other folders)
